:art: Update templates

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,3 +1,11 @@
-{% block content %}
+{% extends 'base.html' %}
 
+{% block content %}
+    {{ bulbs }}
+    {% for item in bulbs %}
+        {{ item.id }}
+        {{ item.name }}
+        {{ item.brightness }}
+        {{ item.color }}
+    {% endfor %}
 {% endblock %}
