--- a/home/templates/bulb/detail.html
+++ b/home/templates/bulb/detail.html
@@ -1,8 +1,7 @@
+{% extends 'base.html' %}
 {% block content %}
-  <h2>Login</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">create</button>
-  </form>
+    {{ object.name }}
+    {{ object.brightness }}
+    {{ object.state }}
+    {{ object.color }}
 {% endblock %}
