--- a/home/templates/fan/detail.html
+++ b/home/templates/fan/detail.html
@@ -1,8 +1,5 @@
 {% block content %}
-  <h2>Login</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">create</button>
-  </form>
+    {{ object.name }}
+    {{ object.speed }}
+    {{ object.state }}
 {% endblock %}
