:art: Add footer block for base template

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -1,9 +1,11 @@
 {% block title %}
-
+    <a href="{% url 'home' %}">Home</a>
 {% endblock %}
 
 
 {% block content %}
-
 {% endblock %}
 
+{% block footer %}
+    <a href="{% url 'logout' %}">Logout</a>
+{% endblock %}
