--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,11 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    {{ bulbs }}
+    <h1> Hello {{ request.user.username }}</h1>
+    </br>
+    <h2> Here are list of your devices</h2>
     {% for item in bulbs %}
         {{ item.id }}
         {{ item.name }}
         {{ item.brightness }}
         {{ item.color }}
+        </br>
     {% endfor %}
+
+    </br>
+    <a href="{% url 'bulb:create' %}"> Add new Bulb</a>
+    </br>
+    <a href="{% url 'fan:create' %}"> Add new Fan</a>
+
 {% endblock %}
