--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -4,16 +4,42 @@
     <h1> Hello {{ request.user.username }}</h1>
     </br>
     <h2> Here are list of your devices</h2>
-    {% for item in bulbs %}
-        {{ item.id }}
-        {{ item.name }}
-        {{ item.brightness }}
-        {{ item.color }}
-        </br>
-    {% endfor %}
-
+    <h3>Bulbs</h3>
+    <table>
+        <thead>
+            <td>ID</td>
+            <td>Name</td>
+            <td>Brightness</td>
+            <td>Color</td>
+        </thead>
+        {% for item in bulbs %}
+            <tr>
+                <td>{{ item.id }}</td>
+                <td>{{ item.name }}</td>
+                <td>{{ item.brightness }}</td>
+                <td bgcolor="{{ item.color }}">{{ item.color }}</td>
+            </tr>
+        {% endfor %}
+    </table>
     </br>
     <a href="{% url 'bulb:create' %}"> Add new Bulb</a>
+    </br>
+    <h3>Fans</h3>
+
+    <table>
+        <thead>
+            <td>ID</td>
+            <td>Name</td>
+            <td>Speed</td>
+        </thead>
+        {% for item in fans %}
+             <tr>
+                <td>{{ item.id }}</td>
+                <td>{{ item.name }}</td>
+                <td>{{ item.speed }}</td>
+            </tr>
+        {% endfor %}
+    </table>
     </br>
     <a href="{% url 'fan:create' %}"> Add new Fan</a>
 
