:art: Add view button

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -11,6 +11,7 @@
             <td>Name</td>
             <td>Brightness</td>
             <td>Color</td>
+            <td>View Item</td>
         </thead>
         {% for item in bulbs %}
             <tr>
@@ -18,6 +19,7 @@
                 <td>{{ item.name }}</td>
                 <td>{{ item.brightness }}</td>
                 <td bgcolor="{{ item.color }}">{{ item.color }}</td>
+                <td><a href="{% url 'bulb:detail' item.id %}"> View</a></td>
             </tr>
         {% endfor %}
     </table>
@@ -31,12 +33,14 @@
             <td>ID</td>
             <td>Name</td>
             <td>Speed</td>
+            <td>View Item</td>
         </thead>
         {% for item in fans %}
              <tr>
                 <td>{{ item.id }}</td>
                 <td>{{ item.name }}</td>
                 <td>{{ item.speed }}</td>
+                 <td><a href="{% url 'fan:detail' item.id %}"> View</a></td>
             </tr>
         {% endfor %}
     </table>
