--- a/home/templates/fan/detail.html
+++ b/home/templates/fan/detail.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    {{ object.name }}
-    {{ object.speed }}
-    {{ object.state }}
+    Name:- {{ object.name }}
+    </br>
+    Speed: -{{ object.speed }}
+    </br>
+    State:- {{ object.state }}
+    </br>
   </br>
     <a href="{% url 'fan:delete' object.id %}"> Delete</a>
     </br>
