--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -11,5 +11,5 @@
 {% block footer %}
     </br>
     </br>
-    <a href="{% url 'logout' %}">Logout</a>
+    <a href="{% url 'accounts:logout' %}">Logout</a>
 {% endblock %}
