--- a/home/templates/fan/update.html
+++ b/home/templates/fan/update.html
@@ -4,6 +4,6 @@
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">create</button>
+    <button type="submit">update</button>
   </form>
 {% endblock %}
